--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
     <li><strong>instructions</strong>: Prompt for your chatbot's behavior</li>
   </ul>
 
-  <p>📂 <a href="https://github.com/jovylle/chat-widget" target="_blank">View on GitHub</a></p>
+  <p>📂 <a href="https://github.com/jovylle/chatbot-widget" target="_blank">View on GitHub</a></p>
   <h2>🧪 Live Demo</h2>
   <p>Use the form below to override instructions & position—no URL params will show, and the widget updates instantly.</p>
   <div id="demo-form" class="demo">
