--- a/public/test.html
+++ b/public/test.html
@@ -17,7 +17,7 @@
     - position: "bottom-right" (default), "bottom-left", "top-right", "top-left"
   -->
 
-  <script type="application/json" id="widget-config-001">
+  <script type="application/json" id="chat-widget-config-001">
     {
       "chatbot": {
         "instructions": "You're a helpful assistant for this site."
